--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -79,3 +79,12 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
+    - name: Codacy Analysis
+      run: |
+        if [[ -n "${{ secrets.CODACY_API_TOKEN }}" ]]; then
+          export CODACY_API_TOKEN="${{ secrets.CODACY_API_TOKEN }}"
+          bash .agent/scripts/codacy-cli.sh analyze
+        else
+          echo "Codacy API token not configured, skipping analysis"
+        fi
