feat: Add Outscraper MCP integration with subagent-only access
- Add automatic MCP server configuration in generate-opencode-agents.sh
- Create @outscraper subagent with outscraper_* tools enabled
- Disable outscraper tools globally for reduced MCP loading overhead
- Add comprehensive outscraper.md documentation
- Add outscraper-config.json.txt and MCP template
- Include Repomix AI context generation configuration
- Fix Plan+ agent permission bypass vulnerability

--- a/.gitignore
+++ b/.gitignore
@@ -172,3 +172,9 @@ test-*.yaml
 !.kiro
 !.ai
 !.qoder/
+
+# Repomix generated outputs (generate on-demand, don't commit)
+repomix-output.*
+*-repomix-*.xml
+*-repomix-*.md
+*-repomix-*.json
